.provarCaches/00D5f000005vwGkEAI/objects/rstkf__glbudsum__c.object
<CustomObject>
    <description>glbudsum__c</description>
    <fields>
        <fullName>rstkf__altextid__c</fullName>
        <description>altextid</description>
        <externalId>true</externalId>
        <inlineHelpText>altextid</inlineHelpText>
        <label>altextid</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_balance__c</fullName>
        <formula>rstkf__glbudsum_dramt__c - rstkf__glbudsum_cramt__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_cmpno__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Company</description>
        <inlineHelpText>Company</inlineHelpText>
        <label>Company</label>
        <referenceTo>rstkf__glcmp__c</referenceTo>
        <relationshipLabel>Z_OBSOLETE</relationshipLabel>
        <relationshipName>glbudsums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_company__c</fullName>
        <description>Company</description>
        <inlineHelpText>Company</inlineHelpText>
        <label>Company (Text)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_cramt__c</fullName>
        <description>Credit Amount</description>
        <inlineHelpText>Credit Amount</inlineHelpText>
        <label>Credit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_dimval1__c</fullName>
        <description>Dimension 1</description>
        <inlineHelpText>Dimension 1</inlineHelpText>
        <label>Dimension 1 (Text)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_dimval1_l__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dimension 1</description>
        <inlineHelpText>Dimension 1</inlineHelpText>
        <label>Dimension 1</label>
        <referenceTo>rstk__sydim__c</referenceTo>
        <relationshipLabel>Z_OBSOLETE (Dimension 1)</relationshipLabel>
        <relationshipName>glbudsums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_dimval2__c</fullName>
        <description>Dimension 2</description>
        <inlineHelpText>Dimension 2</inlineHelpText>
        <label>Dimension 2 (Text)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_dimval2_l__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dimension 2</description>
        <inlineHelpText>Dimension 2</inlineHelpText>
        <label>Dimension 2</label>
        <referenceTo>rstk__sydim__c</referenceTo>
        <relationshipLabel>Z_OBSOLETE (Dimension 2)</relationshipLabel>
        <relationshipName>glbudsums2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_dimval3__c</fullName>
        <description>Dimension 3</description>
        <inlineHelpText>Dimension 3</inlineHelpText>
        <label>Dimension 3 (Text)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_dimval3_l__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Dimension 3</description>
        <inlineHelpText>Dimension 3</inlineHelpText>
        <label>Dimension 3</label>
        <referenceTo>rstk__sydim__c</referenceTo>
        <relationshipLabel>Z_OBSOLETE (Dimension 3)</relationshipLabel>
        <relationshipName>glbudsums3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_dramt__c</fullName>
        <description>Debit Amount</description>
        <inlineHelpText>Debit Amount</inlineHelpText>
        <label>Debit Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_glacct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>GL Account</description>
        <inlineHelpText>GL Account</inlineHelpText>
        <label>GL Account</label>
        <referenceTo>rstkf__glacct__c</referenceTo>
        <relationshipLabel>Z_OBSOLETE</relationshipLabel>
        <relationshipName>glbudsums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_glaybud__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Budget Record</description>
        <inlineHelpText>Budget Record</inlineHelpText>
        <label>Budget Record</label>
        <referenceTo>rstkf__glaybud__c</referenceTo>
        <relationshipLabel>Z_OBSOLETE</relationshipLabel>
        <relationshipName>glbudsums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_gldiv__c</fullName>
        <description>Division</description>
        <formula>rstkf__glbudsum_glaybud__r.rstkf__glaybud_gldiv__r.rstkf__gldiv_sydiv__r.rstk__sydiv_div__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Division</inlineHelpText>
        <label>Division (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_gldiv_l__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Division</description>
        <inlineHelpText>Division</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstkf__gldiv__c</referenceTo>
        <relationshipLabel>Z_OBSOLETE</relationshipLabel>
        <relationshipName>glbudsums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_glperiod__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fiscal Period</description>
        <inlineHelpText>Fiscal Period</inlineHelpText>
        <label>Fiscal Period</label>
        <referenceTo>rstkf__glperiod__c</referenceTo>
        <relationshipLabel>Z_OBSOLETE</relationshipLabel>
        <relationshipName>glbudsums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_glproj__c</fullName>
        <description>Project</description>
        <formula>rstkf__glbudsum_glaybud__r.rstkf__glaybud_glproj__r.rstkf__glproj_proj__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Project</inlineHelpText>
        <label>Project (Text)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_glproj_l__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Project</description>
        <inlineHelpText>Project</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstkf__glproj__c</referenceTo>
        <relationshipLabel>Z_OBSOLETE</relationshipLabel>
        <relationshipName>glbudsums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_glyear__c</fullName>
        <description>Fiscal Year</description>
        <formula>rstkf__glbudsum_glyear_l__r.rstkf__glyear_year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Fiscal Year</inlineHelpText>
        <label>Fiscal Year (Text)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_glyear_l__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Fiscal Year</description>
        <inlineHelpText>Fiscal Year</inlineHelpText>
        <label>Fiscal Year</label>
        <referenceTo>rstkf__glyear__c</referenceTo>
        <relationshipLabel>Z_OBSOLETE</relationshipLabel>
        <relationshipName>glbudsums</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_period__c</fullName>
        <description>Fiscal Period</description>
        <inlineHelpText>Fiscal Period</inlineHelpText>
        <label>Fiscal Period (Text)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_revlevel__c</fullName>
        <description>Revision</description>
        <inlineHelpText>Revision</inlineHelpText>
        <label>Revision</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_revstatus__c</fullName>
        <description>Revision Status</description>
        <inlineHelpText>Revision Status</inlineHelpText>
        <label>Revision Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Official Base Budget</fullName>
                </value>
                <value>
                    <fullName>Official Revision</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__glbudsum_scope__c</fullName>
        <description>Budget Scope</description>
        <inlineHelpText>Budget Scope</inlineHelpText>
        <label>Budget Scope</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acct-Wide Data</fullName>
                </value>
                <value>
                    <fullName>Division-Specific Data</fullName>
                </value>
                <value>
                    <fullName>Project-Specific Data</fullName>
                </value>
                <value>
                    <fullName>Account &amp; Dimension-Specific Data</fullName>
                </value>
                <value>
                    <fullName>Division &amp; Dimension-Specific Data</fullName>
                </value>
                <value>
                    <fullName>Project &amp; Dimension-Specific Data</fullName>
                </value>
                <value>
                    <fullName>Account &amp; Dim Set-Specific Data</fullName>
                </value>
                <value>
                    <fullName>Division &amp; Dim Set-Specific Data</fullName>
                </value>
                <value>
                    <fullName>Project &amp; Dim Set-Specific Data</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <description>Triggeroptions</description>
        <inlineHelpText>Triggeroptions</inlineHelpText>
        <label>Triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Z_OBSOLETE</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Z_OBSOLETE</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>